# reactive-python-app

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
growth/: bootstrap.py  settings.py
growth/adapters/inbound/graphql/: main.py  model.py  mutations.py  schema.graphql
growth/adapters/inbound/graphql/mutations/: schema.graphql  types.py
growth/adapters/inbound/graphql/queries/: schema.graphql  types.py
growth/core/application/: commands.py  events.py  handlers.py  message_bus.py  policies.py  ports.py  unit_of_work.py
growth/core/application/usecases/: calculate_incumbent_rates.py  calculate_savings.py  change_growth_margin.py  change_market_variable_rate.py  change_market_wholesale_cost.py  change_tariff_market_variable_rate.py
growth/core/domain/: commands.py  events.py  functions.py  types.py
tests/: conftest.py
tests/application/usecases/: test_calculate_incumbent_rates.py  test_calculate_savings.py  test_change_growth_margin.py  test_change_market_variable_rate.py  test_change_market_wholesale_cost.py  test_change_tariff_market_variable_rate.py
tests/application/workflows/: test_change_growth_margin.py  test_change_market_wholesale_cost.py
tests/stubs/: unit_of_work.py
