[tool.poetry]
name = "reactive-python-app"
version = "0.1.0"
description = ""
authors = ["Greg Brown <gregbrowndev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
