[tool.poetry]
name = "reactive-python-app"
version = "0.1.0"
description = ""
authors = ["Greg Brown <gregbrowndev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
Rx = "^3.2.0"
SQLAlchemy = "^1.4.26"
Flask = "^2.0.2"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
ariadne = "^0.13.0"
fastapi = "0.68.2"
websockets = "^10.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
pytest-cov = "^3.0.0"
ipython = "^7.28.0"
pytest-mock = "^3.6.1"
mypy = "^0.910"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.26"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
